add get document/{id]/tags
